--- a/public/assets/home/css/style.css
+++ b/public/assets/home/css/style.css
@@ -552,7 +552,7 @@ color:#fff;
 * ----------------------------------------------------------------------------------------
 */
 .site-logo img {
-	width: 150px;
+	width: 250px;
 	height: auto;
 	margin-top: 10px;
 }
@@ -2267,7 +2267,7 @@ font-size: 30px;
 	margin-top: 15px;
 }
 .testi_pic_title{
-
+margin-top: 100px;
 padding:20px;
 }
 .tpt_one{background:rgba(46,202,127,0.2);}
