--- a/public/assets/home/css/style.css
+++ b/public/assets/home/css/style.css
@@ -579,7 +579,7 @@ color:#fff;
 	        box-shadow: 0 0 40px rgba(0, 0, 0, 0.07);
 }
 #navigation {
-	padding: 10px 0;
+	/* padding: 10px 0; */
 	background-color: #fff;
 }
 #navigation.navbar-fixed {
